<resources>
    <string name="app_name">Kalkulator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clearAll">AC</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="plusMinus">+/-</string>
    <string name="parenthesis">()</string>
    <string name="clear">C/CE</string>
    <string name="dot">.</string>
    <string name="options">...</string>
    <string name="display">Enter in a value</string>

    <string name="calculator">Calculator</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="kalkulator">CALCULATOR</string>
    <string name="author">Author: Mateusz Kapka</string>
    <string name="aboutText">Simple application containing a simple and advanced calculator</string>
    <string name="important">IMPORTANT</string>
    <string name="importantText">The application was developed in dark mode!</string>

    <string name="formatError">Format error</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>
    <string name="power">^</string>
    <string name="square">^2</string>
</resources>