<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleCalc">

    <EditText
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:autofillHints="false"
        android:background="@drawable/edit_text"
        android:inputType="none"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/formatError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:text="@string/formatError"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sinBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/sin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/cosBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/cos"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/tanBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/tan"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/lnBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/ln"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/logBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/log"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/percentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sqrtBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/sqrt"
                android:background="@drawable/advanced_roundbtn_animation"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/powerBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/power"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/squareBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/advanced_roundbtn_animation"
                android:text="@string/square"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearAllBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/green_230"
                android:text="@string/clearAll"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/green_230"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/blue_245"
                android:text="@string/parenthesis"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/blue_245"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/blue_245"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/minusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/blue_245"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/plusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/blue_245"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/dotBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbtn_animation"
                android:backgroundTint="@color/silver"
                android:text="@string/equals"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>